# ONDASINUS88

./: README.md  ROADMAP.md  pyproject.toml  requirements.txt
apps/: webui.py
sinesoothe/: __init__.py  cli.py  engine.py  presets.py
tests/: test_engine.py
